# Project Metadata
# -----------------------------------------------

[tool.poetry]
name = "mkdocs-macros-local"
version = "0.0.0"
description = ""
#readme="README.md"
authors = ["Wolfgang Roenninger <wolfgang.roenninger@axelera.ai>"]
packages = [{ include = "axelera/miraculix_plugins/europa_docs_api" }]


# Package Dependencies
# -----------------------------------------------

[tool.poetry.dependencies]
python = "^3.8"
wavedrom = "~2.0"
package-lib = ">= 0.3, < 0.6"


# Build System
# -----------------------------------------------

[build-system]
requires = ["poetry-core>=1.6"]
build-backend = "poetry.core.masonry.api"
